--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
         </div>
 
       </div>
-      
+
     <!-- Fourth Section: Projects -->
     <section id="projects" class="section scrollspy">
       <h3 class="page-title teal">Extracurricular Projects</h3>
@@ -595,12 +595,6 @@
                     class="mdi-navigation-close right"></i></span>
                 <ul>
                   <li><b>Tools:</b> Go, Unity, C#, Docker</li>
-                  <li>Register/login to the web app(with OAuth-based Google Sign-In).</li>
-                  <li>Search and filter songs based on language and singer.</li>
-                  <li>Create multiple playlists and add/remove songs to/from playlist.</li>
-                  <li>Scroll through recently played/viewed songs.</li>
-
-
                 </ul>
                 <div class="card-action">
                   <a aria-label="Visit " href="https://galvanic-music.herokuapp.com/" target="_blank" data-position="top"
@@ -642,16 +636,6 @@
                   <li>Host Member Learning sessions to teach members about engineering-related topics surrounding equality in Canada</li>
 
                 </ul>
-                <div class="card-action">
-                  <a aria-label="Visit " href="https://quiz-up-app.herokuapp.com/" target="_blank" data-position="top"
-                    data-tooltip="View Online"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/QuizUp"
-                    target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-github"></i></a>
-                </div>
               </div>
             </div>
           </div>
@@ -730,7 +714,7 @@
                 <span class="card-title activator teal-text hoverline">Dining Buddies<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A dining accompaniment program for long term care home residents
+                  An activities program for long term care home residents
                 </p>
               </div>
               <div class="card-reveal">
@@ -739,20 +723,11 @@
                 <span class="card-title teal-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li>Incorporated Convolution Neural Networks (CNN) for extracting image features and Long Short Term
-                    Memory for extracting question
-                    embeddings.</li>
-                  <li>Tested the model on the COCO dataset, abstract scenes images, and got 69% overall accuracy on the
-                    VQA evaluation metric.</li>
+                  <li>Kick-started a program to plan activites that stimulate and entertain long term care home residents by accompanying while dining </li>
+                  <li>Planned and executed art therapy sessions in partnership with the Art Gallery of Ontario</li>
+                  <li>Produced videos to summarize programming</li>
 
                 </ul>
-                <div class="card-action">
-                  <a aria-label="Visit the GitHub repo for  project"
-                    href="https://github.com/varadbhogayata/visual-question-answering" target="_blank"
-                    data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-github"></i></a>
-                </div>
               </div>
             </div>
           </div>
@@ -777,7 +752,7 @@
                     class="mdi-navigation-close right"></i></span>
                 <ul>
                   <li><b>Tools:</b> Unity, C#</li>
-                  <li>Uses Unity to create a VR environment that emulates a classroom setting</li></li>
+                  <li>Used Unity to create a VR environment that emulates a classroom setting</li></li>
 
                 </ul>
                 <div class="card-action">
@@ -810,12 +785,11 @@
                 <span class="card-title brown-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li>Developed system was tested on a human-face database and loss was calculated by comparing the PCAs
-                    of generated and original image.</li>
-                  <li>Calculated difference in PCA was less than 10%, depicting the successful generation of an image by
-                    the generator.</li>
+                  <li>Potentiometer</li>
+                  <li>Touch-sensor</li>
 
                 </ul>
+                <!-- TODO: upload things -->
                 <div class="card-action">
                   <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/"
                     target="_blank" data-position="top" data-tooltip="View Source"
